modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-sysctls/test_samples/constraint_templates/pss_baseline/005-allowed-net-ipv4-tcp-syncookies.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-net-ipv4-tcp-syncookies
  namespace: testns
spec:
  securityContext:
    sysctls:
    - name: net.ipv4.tcp_syncookies
      value: "1"
