modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-sysctls/test_samples/constraint_templates/pss_baseline/008-disallowed-deployment-net-core-rmem-max.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disallowed-deployment-net-core-rmem-max
  namespace: testns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      securityContext:
        sysctls:
        - name: net.core.rmem_max
          value: "16777216"
      containers:
        - name: nginx
          image: nginx
