modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-sysctls/test_samples/constraint_templates/pss_baseline/009-disallowed-kernel-msgmax.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-kernel-msgmax
  namespace: testns
spec:
  securityContext:
    sysctls:
    - name: kernel.msgmax
      value: "65536"
