modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-sysctls/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-sysctls
tests:
- name: pss-baseline
  template: ../../templates/security/allowed-sysctls.yaml
  constraint: constraint_pss_baseline.yaml
  cases:
  - name: 006-allowed-no-sysctls
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/006-allowed-no-sysctls.yaml
    assertions:
    - violations: no
  - name: 003-allowed-kernel-shm-rmid-forced
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/003-allowed-kernel-shm-rmid-forced.yaml
    assertions:
    - violations: no
  - name: 005-allowed-net-ipv4-tcp-syncookies
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/005-allowed-net-ipv4-tcp-syncookies.yaml
    assertions:
    - violations: no
  - name: 004-allowed-multiple-sysctls
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/004-allowed-multiple-sysctls.yaml
    assertions:
    - violations: no
  - name: 011-disallowed-net-core-rmem-max
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/011-disallowed-net-core-rmem-max.yaml
    assertions:
    - violations: yes
  - name: 009-disallowed-kernel-msgmax
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/009-disallowed-kernel-msgmax.yaml
    assertions:
    - violations: yes
  - name: 010-disallowed-multiple-sysctls-one-disallowed
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/010-disallowed-multiple-sysctls-one-disallowed.yaml
    assertions:
    - violations: yes
  - name: 002-allowed-deployment-no-sysctls
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/002-allowed-deployment-no-sysctls.yaml
    assertions:
    - violations: no
  - name: 008-disallowed-deployment-net-core-rmem-max
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/008-disallowed-deployment-net-core-rmem-max.yaml
    assertions:
    - violations: no
  - name: 001-allowed-daemonset-no-sysctls
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/001-allowed-daemonset-no-sysctls.yaml
    assertions:
    - violations: no
  - name: 007-disallowed-daemonset-net-core-rmem-max
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/007-disallowed-daemonset-net-core-rmem-max.yaml
    assertions:
    - violations: no
- name: security-policy
  template: ../../templates/security/allowed-sysctls.yaml
  constraint: constraint_security_policy.yaml
  cases:
  - name: 016-allowed-no-sysctls
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/016-allowed-no-sysctls.yaml
    assertions:
    - violations: no
  - name: 014-allowed-kernel-shm-rmid-forced
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/014-allowed-kernel-shm-rmid-forced.yaml
    assertions:
    - violations: no
  - name: 015-allowed-net-core-rmem-max
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/015-allowed-net-core-rmem-max.yaml
    assertions:
    - violations: no
  - name: 020-disallowed-net-fake-sysctl
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/020-disallowed-net-fake-sysctl.yaml
    assertions:
    - violations: yes
  - name: 019-disallowed-multiple-sysctls-one-forbidden
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/019-disallowed-multiple-sysctls-one-forbidden.yaml
    assertions:
    - violations: yes
  - name: 013-allowed-deployment-no-sysctls
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/013-allowed-deployment-no-sysctls.yaml
    assertions:
    - violations: no
  - name: 018-disallowed-deployment-net-fake-sysctl
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/018-disallowed-deployment-net-fake-sysctl.yaml
    assertions:
    - violations: no
  - name: 012-allowed-daemonset-no-sysctls
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/012-allowed-daemonset-no-sysctls.yaml
    assertions:
    - violations: no
  - name: 017-disallowed-daemonset-net-fake-sysctl
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/017-disallowed-daemonset-net-fake-sysctl.yaml
    assertions:
    - violations: no
- name: pss-baseline-with-exception
  template: ../../templates/security/allowed-sysctls.yaml
  constraint: constraint_pss_baseline.yaml
  cases:
  - name: 023-029-allowed-by-exception-net-core-rmem-max
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/023-allow-net-core-rmem-max.yaml
    object: test_samples/security_policy_exceptions/pods/029-allowed-by-exception-net-core-rmem-max.yaml
    assertions:
    - violations: no
  - name: 022-028-allowed-by-exception-multiple-sysctls
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/022-allow-multiple-sysctls.yaml
    object: test_samples/security_policy_exceptions/pods/028-allowed-by-exception-multiple-sysctls.yaml
    assertions:
    - violations: no
  - name: 023-031-disallowed-by-exception-sysctl-mismatch
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/023-allow-net-core-rmem-max.yaml
    object: test_samples/security_policy_exceptions/pods/031-disallowed-by-exception-sysctl-mismatch.yaml
    assertions:
    - violations: yes
  - name: 032-disallowed-no-exception-label
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/security_policy_exceptions/pods/032-disallowed-no-exception-label.yaml
    assertions:
    - violations: yes
  - name: 023-027-allowed-by-exception-mismatch-but-constraint-allows
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/023-allow-net-core-rmem-max.yaml
    object: test_samples/security_policy_exceptions/pods/027-allowed-by-exception-mismatch-but-constraint-allows.yaml
    assertions:
    - violations: no
  - name: 023-030-disallowed-by-exception-multiple-sysctls-one-mismatch
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/023-allow-net-core-rmem-max.yaml
    object: test_samples/security_policy_exceptions/pods/030-disallowed-by-exception-multiple-sysctls-one-mismatch.yaml
    assertions:
    - violations: yes
- name: security-policy-with-exception
  template: ../../templates/security/allowed-sysctls.yaml
  constraint: constraint_security_policy.yaml
  cases:
  - name: 024-026-allowed-by-exception-forbidden-sysctl
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/024-allow-net-fake-sysctl.yaml
    object: test_samples/security_policy_exceptions/pods/026-allowed-by-exception-forbidden-sysctl.yaml
    assertions:
    - violations: no
  - name: 025-033-disallowed-by-exception-empty-spec
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/025-empty-spec.yaml
    object: test_samples/security_policy_exceptions/pods/033-disallowed-by-exception-empty-spec.yaml
    assertions:
    - violations: yes
